--- a/.github/workflows/build-ygopro.yml
+++ b/.github/workflows/build-ygopro.yml
@@ -1,23 +1,37 @@
-name: Build ygopro with Docker
+name: Sync Fork and Build ygopro
 
 on:
   push:
     branches:
-      - main
+      - server
   pull_request:
     branches:
-      - main
+      - server
 
 jobs:
-  build:
+  sync-and-build:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repository
+    - name: Checkout your fork
       uses: actions/checkout@v3
+      with:
+        repository: termitaklk/ygopro # Tu fork
+        ref: server
 
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v2
+    - name: Add upstream repo
+      run: |
+        git remote add upstream https://github.com/mycard/ygopro.git
+        git fetch upstream
+
+    - name: Sync with upstream (merge)
+      run: |
+        git checkout server
+        git merge upstream/server --no-edit
+        git push origin server
+
+    - name: Verify sync status
+      run: git log --oneline --graph --decorate --all
 
     - name: Make build_ygopro.sh executable
       run: chmod +x scripts/build_ygopro.sh
@@ -30,6 +44,8 @@ jobs:
       with:
         name: ygopro-binary
         path: ./build/ygopro
+
+
 
 
 
