--- a/.github/workflows/build-ygopro.yml
+++ b/.github/workflows/build-ygopro.yml
@@ -7,7 +7,8 @@ on:
   pull_request:
     branches:
       - server
-
+  workflow_dispatch:
+      
 jobs:
   sync-and-build:
     runs-on: ubuntu-latest
