--- a/.github/workflows/build-ygopro.yml
+++ b/.github/workflows/build-ygopro.yml
@@ -7,7 +7,8 @@ on:
   pull_request:
     branches:
       - server
-  workflow_dispatch:
+  workflow_dispatch: # Permite ejecución manual
+
 jobs:
   sync-and-build:
     runs-on: ubuntu-latest
@@ -30,17 +31,15 @@ jobs:
         git checkout server
         git fetch upstream server
         if [ "$(git rev-list HEAD..upstream/server --count)" -eq 0 ]; then
-          echo "No new commits in upstream."
           echo "updated=false" >> $GITHUB_ENV
         else
-          echo "New commits found in upstream."
           echo "updated=true" >> $GITHUB_ENV
         fi
 
     - name: Merge new commits if available
-      if: env.updated == 'true'
+      if: ${{ env.updated == 'true' }}
       run: |
-        git merge upstream/server --no-edit
+        git merge upstream/server --allow-unrelated-histories --no-edit
         git push origin server
 
     - name: Verify repository status
@@ -57,6 +56,7 @@ jobs:
       with:
         name: ygopro-binary
         path: ./build/ygopro
+
 
 
 
