--- a/.github/workflows/build-ygopro.yml
+++ b/.github/workflows/build-ygopro.yml
@@ -20,6 +20,11 @@ jobs:
         repository: termitaklk/ygopro # Tu fork
         ref: server
 
+    - name: Configure Git identity
+      run: |
+        git config --global user.name "GitHub Actions"
+        git config --global user.email "actions@github.com"
+
     - name: Add upstream repo
       run: |
         git remote add upstream https://github.com/mycard/ygopro.git
@@ -56,6 +61,7 @@ jobs:
       with:
         name: ygopro-binary
         path: ./build/ygopro
+
 
 
 
