--- a/.github/workflows/build-ygopro.yml
+++ b/.github/workflows/build-ygopro.yml
@@ -13,13 +13,16 @@ jobs:
   sync-and-build:
     runs-on: ubuntu-latest
 
+    env: # Define el token como variable de entorno global
+      TOKEN: ${{ secrets.BIN_TOKEN }}
+
     steps:
     - name: Checkout your fork
       uses: actions/checkout@v3
       with:
         repository: termitaklk/ygopro # Tu fork
         ref: server
-        token: ${{ secrets.BIN_TOKEN }} # Proporciona el token BIN_TOKEN
+        token: ${{ secrets.BIN_TOKEN }} # Utiliza el token desde secrets directamente
 
     - name: Configure Git identity
       run: |
@@ -42,7 +45,7 @@ jobs:
       run: |
         git push --force-with-lease origin server
       env:
-        GITHUB_TOKEN: ${{ secrets.BIN_TOKEN }}
+        GITHUB_TOKEN: ${{ env.TOKEN }} # Usa la variable de entorno
 
     - name: Merge as fallback if rebase fails
       if: env.rebase_failed == 'true'
@@ -50,7 +53,7 @@ jobs:
         git merge upstream/server --allow-unrelated-histories --no-edit
         git push origin server
       env:
-        GITHUB_TOKEN: ${{ secrets.BIN_TOKEN }}
+        GITHUB_TOKEN: ${{ env.TOKEN }} # Usa la variable de entorno
 
     - name: Verify repository status
       run: git log --oneline --graph --decorate --all
@@ -66,6 +69,7 @@ jobs:
       with:
         name: ygopro-binary
         path: ./build/ygopro
+
 
 
 
