--- a/.github/workflows/build-ygopro.yml
+++ b/.github/workflows/build-ygopro.yml
@@ -17,14 +17,14 @@ jobs:
     - name: Debug BIN_TOKEN availability
       run: echo "BIN_TOKEN is set and valid"
       env:
-        TOKEN: ${{ secrets.BIN_TOKEN }}
+        BIN_TOKEN: ${{ secrets.BIN_TOKEN }}
 
     - name: Checkout your fork
       uses: actions/checkout@v3
       with:
-        repository: termitaklk/ygopro
+        repository: termitaklk/ygopro # Tu fork
         ref: server
-        token: ${{ secrets.BIN_TOKEN }}
+        token: ${{ secrets.BIN_TOKEN }} # Pasar el token explícitamente
 
     - name: Configure Git identity
       run: |
@@ -71,6 +71,7 @@ jobs:
       with:
         name: ygopro-binary
         path: ./build/ygopro
+
 
 
 
