--- a/.github/workflows/build-ygopro.yml
+++ b/.github/workflows/build-ygopro.yml
@@ -15,12 +15,17 @@ jobs:
     steps:
     - name: Checkout repository
       uses: actions/checkout@v3
+      with:
+        fetch-depth: 0 # Clona todo el historial para asegurarte de que todos los archivos estén presentes
 
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v2
+    - name: Verify repository structure
+      run: ls -R # Lista todos los archivos para verificar que scripts/build_ygopro.sh exista
 
     - name: Make build_ygopro.sh executable
       run: chmod +x scripts/build_ygopro.sh
+
+    - name: Verify permissions of build_ygopro.sh
+      run: ls -l scripts/build_ygopro.sh # Verifica que el archivo tenga permisos de ejecución
 
     - name: Build ygopro using Docker
       run: ./scripts/build_ygopro.sh
@@ -30,6 +35,7 @@ jobs:
       with:
         name: ygopro-binary
         path: ./build/ygopro
+
 
 
 
