--- a/.github/workflows/build-ygopro.yml
+++ b/.github/workflows/build-ygopro.yml
@@ -18,23 +18,45 @@ jobs:
       with:
         fetch-depth: 0 # Clona todo el historial para asegurarte de que todos los archivos estén presentes
 
-    - name: Verify repository structure
-      run: ls -R # Lista todos los archivos para verificar que scripts/build_ygopro.sh exista
+    - name: Log repository structure
+      run: |
+        echo "Logging repository structure..."
+        ls -R # Lista todos los archivos y carpetas
+
+    - name: Verify scripts directory
+      run: |
+        echo "Checking the scripts/ directory..."
+        ls -l scripts/ # Verifica específicamente el contenido de la carpeta scripts
+
+    - name: Verify build_ygopro.sh existence
+      run: |
+        echo "Checking if build_ygopro.sh exists..."
+        if [ -f scripts/build_ygopro.sh ]; then
+          echo "scripts/build_ygopro.sh exists!"
+        else
+          echo "ERROR: scripts/build_ygopro.sh does not exist!"
+          exit 1
+        fi
 
     - name: Make build_ygopro.sh executable
       run: chmod +x scripts/build_ygopro.sh
 
     - name: Verify permissions of build_ygopro.sh
-      run: ls -l scripts/build_ygopro.sh # Verifica que el archivo tenga permisos de ejecución
+      run: |
+        echo "Verifying permissions of build_ygopro.sh..."
+        ls -l scripts/build_ygopro.sh # Muestra los permisos del archivo
 
     - name: Build ygopro using Docker
-      run: ./scripts/build_ygopro.sh
+      run: |
+        echo "Running build_ygopro.sh..."
+        ./scripts/build_ygopro.sh
 
     - name: Upload ygopro binary as artifact
       uses: actions/upload-artifact@v3
       with:
         name: ygopro-binary
         path: ./build/ygopro
+
 
 
 
