--- a/.github/workflows/build-ygopro.yml
+++ b/.github/workflows/build-ygopro.yml
@@ -19,17 +19,31 @@ jobs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
 
+    - name: Create build directory
+      run: mkdir -p ./build
+
     - name: Make build_ygopro.sh executable
       run: chmod +x scripts/build_ygopro.sh
 
     - name: Build ygopro using Docker
       run: ./scripts/build_ygopro.sh
 
+    - name: List files in build directory
+      run: ls -l ./build
+
+    - name: Validate binary existence
+      run: |
+        if [ ! -f ./build/ygopro ]; then
+          echo "Binary not found!";
+          exit 1;
+        fi
+
     - name: Upload ygopro binary as artifact
       uses: actions/upload-artifact@v3
       with:
         name: ygopro-binary
-        path: ./build/ygopro
+        path: ./build/*
+
 
 
 
