--- a/.github/workflows/build-ygopro.yml
+++ b/.github/workflows/build-ygopro.yml
@@ -3,35 +3,39 @@ name: Build YGO Mobile with Docker
 on:
   push:
     branches:
-      - server
+      - main  # ✅ El workflow SE EJECUTA desde la rama main del repo del Action
   pull_request:
     branches:
-      - server
-  workflow_dispatch:  # ✅ Permite ejecución manual desde GitHub Actions
+      - main
+  workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout Principal Repository (Mycard)
+      # ✅ Clonamos el repositorio PRINCIPAL en la rama SERVER
+      - name: Checkout Principal Repository (YGOPRO - MyCard)
         uses: actions/checkout@v3
         with:
           repository: mycard/ygopro
-          ref: server
+          ref: server  # ✅ Siempre usamos la rama server
           path: base-repo
 
-      - name: Log - Principal Repository Cloned
+      - name: Debug - List Directory Contents
         run: |
-          echo "✅ Repositorio principal clonado en base-repo/"
+          echo "📂 Listado de archivos en base-repo/"
           ls -l base-repo
+          echo "📂 Listado de archivos en base-repo/scripts/"
+          ls -l base-repo/scripts || echo "⚠️ El directorio scripts/ no existe"
 
       - name: Define List of Files to Replace
         run: |
           echo "Definiendo archivos a reemplazar..."
-          echo "FILES=('ocgcore/ocgcore.cpp' 'ocgcore/ocgcore.h' 'lua/lua_core.cpp')" >> $GITHUB_ENV
+          echo "FILES=ocgcore/ocgcore.cpp ocgcore/ocgcore.h lua/lua_core.cpp" >> $GITHUB_ENV
           echo "✅ Archivos definidos: ocgcore/ocgcore.cpp, ocgcore/ocgcore.h, lua/lua_core.cpp"
 
+      # ✅ Clonamos el repositorio SECUNDARIO en la rama SERVER
       - name: Checkout Secondary Repository (ygopro-evolution-bin)
         run: |
           echo "🔄 Clonando el repositorio secundario..."
@@ -42,7 +46,7 @@ jobs:
       - name: Copy and Replace Selected Files
         run: |
           echo "🔄 Iniciando reemplazo de archivos..."
-          for file in ${FILES[@]}; do
+          for file in $FILES; do
             if [ -f "merge-repo/$file" ]; then
               cp -f "merge-repo/$file" "base-repo/$file"
               echo "✅ Reemplazado: $file"
@@ -51,7 +55,7 @@ jobs:
             fi
           done
 
-      - name: Log - Post Merge File Structure
+      - name: Debug - Post Merge File Structure
         run: |
           echo "📂 Estructura de archivos después de la fusión:"
           ls -lR base-repo
@@ -59,6 +63,10 @@ jobs:
       - name: Continue with Build Process
         run: |
           echo "🔄 Iniciando compilación..."
+          if [ ! -f base-repo/scripts/build_ygopro.sh ]; then
+            echo "❌ ERROR: El script de compilación no existe en base-repo/scripts/"
+            exit 1
+          fi
           cd base-repo
           chmod +x scripts/build_ygopro.sh
           ./scripts/build_ygopro.sh
@@ -81,6 +89,7 @@ jobs:
 
       - name: Log - Build Completed
         run: echo "🎉 Proceso completado exitosamente. Binario generado y almacenado como artefacto."
+
 
 
 
