--- a/.github/workflows/build-ygopro.yml
+++ b/.github/workflows/build-ygopro.yml
@@ -3,7 +3,7 @@ name: Build YGO Mobile with Docker
 on:
   push:
     branches:
-      - main  # ✅ El workflow SE EJECUTA desde la rama main del repo del Action
+      - main  # ✅ Workflow se ejecuta en la rama main
   pull_request:
     branches:
       - main
@@ -14,7 +14,19 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # ✅ Clonamos el repositorio PRINCIPAL en la rama SERVER
+      - name: Checkout Repository of the Action
+        uses: actions/checkout@v3
+        with:
+          path: action-repo  # ✅ El Action se ejecuta aquí (donde está el script)
+
+      - name: Debug - Verificar scripts en el Action
+        run: |
+          echo "📂 Listado de archivos en el repo del Action:"
+          ls -l action-repo
+          echo "📂 Listado de archivos en action-repo/scripts/"
+          ls -l action-repo/scripts || echo "⚠️ El directorio scripts/ no existe en el Action"
+
+      # ✅ Clonamos el REPO PRINCIPAL en la rama SERVER
       - name: Checkout Principal Repository (YGOPRO - MyCard)
         uses: actions/checkout@v3
         with:
@@ -22,26 +34,19 @@ jobs:
           ref: server  # ✅ Siempre usamos la rama server
           path: base-repo
 
-      - name: Debug - List Directory Contents
-        run: |
-          echo "📂 Listado de archivos en base-repo/"
-          ls -l base-repo
-          echo "📂 Listado de archivos en base-repo/scripts/"
-          ls -l base-repo/scripts || echo "⚠️ El directorio scripts/ no existe"
-
-      - name: Define List of Files to Replace
-        run: |
-          echo "Definiendo archivos a reemplazar..."
-          echo "FILES=ocgcore/ocgcore.cpp ocgcore/ocgcore.h lua/lua_core.cpp" >> $GITHUB_ENV
-          echo "✅ Archivos definidos: ocgcore/ocgcore.cpp, ocgcore/ocgcore.h, lua/lua_core.cpp"
-
-      # ✅ Clonamos el repositorio SECUNDARIO en la rama SERVER
+      # ✅ Clonamos el REPO SECUNDARIO en la rama SERVER
       - name: Checkout Secondary Repository (ygopro-evolution-bin)
         run: |
           echo "🔄 Clonando el repositorio secundario..."
           git clone --branch=server --depth=1 https://github.com/termitaklk/ygopro-evolution-bin merge-repo
           echo "✅ Repositorio secundario clonado en merge-repo/"
           ls -l merge-repo
+
+      - name: Define List of Files to Replace
+        run: |
+          echo "Definiendo archivos a reemplazar..."
+          echo "FILES=ocgcore/ocgcore.cpp ocgcore/ocgcore.h lua/lua_core.cpp" >> $GITHUB_ENV
+          echo "✅ Archivos definidos: ocgcore/ocgcore.cpp, ocgcore/ocgcore.h, lua/lua_core.cpp"
 
       - name: Copy and Replace Selected Files
         run: |
@@ -60,16 +65,15 @@ jobs:
           echo "📂 Estructura de archivos después de la fusión:"
           ls -lR base-repo
 
-      - name: Continue with Build Process
+      - name: Continue with Build Process (Using Action's Script)
         run: |
-          echo "🔄 Iniciando compilación..."
-          if [ ! -f base-repo/scripts/build_ygopro.sh ]; then
-            echo "❌ ERROR: El script de compilación no existe en base-repo/scripts/"
+          echo "🔄 Iniciando compilación con el script del Action..."
+          if [ ! -f action-repo/scripts/build_ygopro.sh ]; then
+            echo "❌ ERROR: El script de compilación NO EXISTE en action-repo/scripts/"
             exit 1
           fi
-          cd base-repo
-          chmod +x scripts/build_ygopro.sh
-          ./scripts/build_ygopro.sh
+          chmod +x action-repo/scripts/build_ygopro.sh
+          action-repo/scripts/build_ygopro.sh
           echo "✅ Compilación finalizada."
 
       - name: Validate Binary Existence
@@ -89,6 +93,7 @@ jobs:
 
       - name: Log - Build Completed
         run: echo "🎉 Proceso completado exitosamente. Binario generado y almacenado como artefacto."
+
 
 
 
